Update Zig to v0.11.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,15 @@
             "problemMatcher": [
                 "$gcc"
             ]
+        },
+        {
+            "label": "test",
+            "type": "shell",
+            "command": "zig build test",
+            "group": "test",
+            "problemMatcher": [
+                "$gcc"
+            ]
         }
     ]
 }
